tmp/funnel-output_path-LJiCNJpP.tmp/client1/tests/unit/pods/errors/new/controller-test.jshint.js
/home/ubuntu/workspace/tmp/jshinter-output_path-JEUVDGTp.tmp/unit/pods/errors/new/controller-test.jshint.js